# LearnGraphOptimization

./: README.md
doc/: Nonlinear optimization and graph optimization.pptx
examples/CurveFitting/: CMakeLists.txt  CurveFitting.cpp
examples/SLAM/: CMakeLists.txt  SLAM.cpp
include/: Edge.h  LossFunction.h  Problem.h  Vertex.h
src/: Edge.cpp  LossFunction.cpp  Problem.cpp  Vertex.cpp
